--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Liquid Wave Ring</title>
+<title>Detach Line Wave</title>
 
 <style>
 body {
@@ -15,9 +15,7 @@ body {
     overflow: hidden;
 }
 
-canvas {
-    position: absolute;
-}
+canvas { position: absolute; }
 
 #album {
     position: absolute;
@@ -47,45 +45,45 @@ resize();
 window.addEventListener("resize", resize);
 
 const baseRadius = 130;
-const points = 240;
+const lines = 180;
 
 let time = 0;
 
 function animate() {
     requestAnimationFrame(animate);
-
     ctx.clearRect(0, 0, canvas.width, canvas.height);
 
     const centerX = canvas.width / 2;
     const centerY = canvas.height / 2;
 
-    ctx.beginPath();
+    for (let i = 0; i < lines; i++) {
 
-    for (let i = 0; i <= points; i++) {
+        const angle = (i / lines) * Math.PI * 2;
 
-        const angle = (i / points) * Math.PI * 2;
+        // flowing wave offset
+        const flow = Math.sin(angle * 3 + time);
 
-        // Layered smooth waves
-        const waveA = Math.sin(angle * 2 + time) * 10;
-        const waveB = Math.sin(angle * 5 - time * 1.3) * 6;
-        const waveC = Math.sin(angle * 3 + time * 0.7) * 8;
+        // inner radius sometimes moves inward (detaches)
+        const innerRadius = baseRadius + flow * 6;
 
-        const radius = baseRadius + waveA + waveB + waveC;
+        // outer radius always slightly further
+        const outerRadius = baseRadius + 12 + flow * 8;
 
-        const x = centerX + Math.cos(angle) * radius;
-        const y = centerY + Math.sin(angle) * radius;
+        const x1 = centerX + Math.cos(angle) * innerRadius;
+        const y1 = centerY + Math.sin(angle) * innerRadius;
 
-        if (i === 0) ctx.moveTo(x, y);
-        else ctx.lineTo(x, y);
+        const x2 = centerX + Math.cos(angle) * outerRadius;
+        const y2 = centerY + Math.sin(angle) * outerRadius;
+
+        ctx.beginPath();
+        ctx.moveTo(x1, y1);
+        ctx.lineTo(x2, y2);
+        ctx.strokeStyle = "red";
+        ctx.lineWidth = 2;
+        ctx.stroke();
     }
 
-    ctx.closePath();
-
-    ctx.strokeStyle = "red";
-    ctx.lineWidth = 3;
-    ctx.stroke();
-
-    time += 0.03;
+    time += 0.04;
 }
 
 animate();
