--- a/index.html
+++ b/index.html
@@ -1,44 +1,3 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>Wave Control</title>
-
-<style>
-body {
-    margin: 0;
-    background: black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    overflow: hidden;
-}
-
-canvas { position: absolute; }
-
-#album {
-    position: absolute;
-    width: 220px;
-    height: 220px;
-    border-radius: 50%;
-    object-fit: cover;
-    z-index: 2;
-}
-
-#audio {
-    position: absolute;
-    bottom: 20px;
-}
-</style>
-</head>
-
-<body>
-
-<canvas id="canvas"></canvas>
-<img id="album" src="car.png">
-<audio id="audio" src="music.mp3" controls></audio>
-
 <script>
 const canvas = document.getElementById("canvas");
 const ctx = canvas.getContext("2d");
@@ -58,6 +17,13 @@ let time = 0;
 let animationId = null;
 
 function draw() {
+
+    // STOP EXACTLY when audio duration is reached
+    if (audio.currentTime >= audio.duration) {
+        stopAnimation();
+        return;
+    }
+
     ctx.clearRect(0, 0, canvas.width, canvas.height);
 
     const centerX = canvas.width / 2;
@@ -97,19 +63,16 @@ function stopAnimation() {
     ctx.clearRect(0, 0, canvas.width, canvas.height);
 }
 
-// When audio plays
+// Start animation when audio plays
 audio.addEventListener("play", () => {
     if (!animationId) {
         draw();
     }
 });
 
-// When audio pauses
+// Stop when paused
 audio.addEventListener("pause", stopAnimation);
 
-// When audio ends
+// Extra safety: also stop when ended
 audio.addEventListener("ended", stopAnimation);
 </script>
-
-</body>
-</html>
