--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Ferrari Wave Visualizer</title>
+<title>Wave Control</title>
 
 <style>
 body {
@@ -15,9 +15,7 @@ body {
     overflow: hidden;
 }
 
-canvas {
-    position: absolute;
-}
+canvas { position: absolute; }
 
 #album {
     position: absolute;
@@ -38,11 +36,7 @@ canvas {
 <body>
 
 <canvas id="canvas"></canvas>
-
-<!-- Your Ferrari image -->
 <img id="album" src="car.png">
-
-<!-- Your music file -->
 <audio id="audio" src="music.mp3" controls></audio>
 
 <script>
@@ -64,13 +58,6 @@ let time = 0;
 let animationId = null;
 
 function draw() {
-
-    // Stop exactly when audio ends
-    if (audio.currentTime >= audio.duration) {
-        stopAnimation();
-        return;
-    }
-
     ctx.clearRect(0, 0, canvas.width, canvas.height);
 
     const centerX = canvas.width / 2;
@@ -110,19 +97,18 @@ function stopAnimation() {
     ctx.clearRect(0, 0, canvas.width, canvas.height);
 }
 
-// Start when audio plays
+// When audio plays
 audio.addEventListener("play", () => {
     if (!animationId) {
         draw();
     }
 });
 
-// Stop when paused
+// When audio pauses
 audio.addEventListener("pause", stopAnimation);
 
-// Stop when ended
+// When audio ends
 audio.addEventListener("ended", stopAnimation);
-
 </script>
 
 </body>
