--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<title>Wave Visualizer</title>
+
 <style>
 body {
     margin: 0;
@@ -22,12 +24,9 @@ canvas {
     height: 220px;
     border-radius: 50%;
     object-fit: cover;
+    position: absolute;
     z-index: 2;
     cursor: pointer;
-}
-
-#audio {
-    display: none;
 }
 </style>
 </head>
@@ -35,9 +34,11 @@ canvas {
 <body>
 
 <canvas id="canvas"></canvas>
+
 <img id="album" src="car.png">
+
 <audio id="audio">
-    <source src="music.mp3" type="audio/mpeg">
+  <source src="music.mp3" type="audio/mpeg">
 </audio>
 
 <script>
@@ -96,25 +97,18 @@ function stopAnimation() {
     ctx.clearRect(0, 0, canvas.width, canvas.height);
 }
 
-album.addEventListener("click", function() {
-
+album.addEventListener("click", () => {
     if (audio.paused) {
-
         audio.play().then(() => {
             if (!animationId) draw();
-        }).catch(err => {
-            console.log("Play blocked:", err);
         });
-
     } else {
         audio.pause();
     }
-
 });
 
 audio.addEventListener("pause", stopAnimation);
 audio.addEventListener("ended", stopAnimation);
-
 </script>
 
 </body>
