--- a/index.html
+++ b/index.html
@@ -2,33 +2,32 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Wave</title>
+<title>Line Wave Ring</title>
+
 <style>
-body{
-  margin:0;
-  background:black;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  height:100vh;
-  overflow:hidden;
+body {
+    margin: 0;
+    background: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    overflow: hidden;
 }
 
-canvas{
-  position:absolute;
-}
+canvas { position: absolute; }
 
-#album{
-  width:220px;
-  height:220px;
-  border-radius:50%;
-  object-fit:cover;
-  position:absolute;
-  cursor:pointer;
-  z-index:2;
+#album {
+    position: absolute;
+    width: 220px;
+    height: 220px;
+    border-radius: 50%;
+    object-fit: cover;
+    z-index: 2;
 }
 </style>
 </head>
+
 <body>
 
 <canvas id="canvas"></canvas>
@@ -39,66 +38,67 @@ canvas{
 const canvas = document.getElementById("canvas");
 const ctx = canvas.getContext("2d");
 const audio = document.getElementById("audio");
-const album = document.getElementById("album");
 
-canvas.width = window.innerWidth;
-canvas.height = window.innerHeight;
+function resize() {
+    canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
+}
+resize();
+window.addEventListener("resize", resize);
 
 const baseRadius = 130;
-const lines = 180;
+const lines = 200;
 
 let time = 0;
-let animationId = null;
+let animationRunning = false;
 
-function draw(){
-  ctx.clearRect(0,0,canvas.width,canvas.height);
+function animate() {
+    if (!animationRunning) return;
 
-  const cx = canvas.width/2;
-  const cy = canvas.height/2;
+    requestAnimationFrame(animate);
+    ctx.clearRect(0, 0, canvas.width, canvas.height);
 
-  for(let i=0;i<lines;i++){
-    const angle = (i/lines)*Math.PI*2;
-    const wave = Math.sin(angle*6 + time);
+    const centerX = canvas.width / 2;
+    const centerY = canvas.height / 2;
 
-    const inner = baseRadius + wave*4;
-    const outer = baseRadius + 10 + wave*6;
+    for (let i = 0; i < lines; i++) {
 
-    const x1 = cx + Math.cos(angle)*inner;
-    const y1 = cy + Math.sin(angle)*inner;
+        const angle = (i / lines) * Math.PI * 2;
+        const flow = Math.sin(angle * 6 + time);
 
-    const x2 = cx + Math.cos(angle)*outer;
-    const y2 = cy + Math.sin(angle)*outer;
+        const innerRadius = baseRadius + flow * 4;
+        const outerRadius = baseRadius + 8 + flow * 6;
 
-    ctx.beginPath();
-    ctx.moveTo(x1,y1);
-    ctx.lineTo(x2,y2);
-    ctx.strokeStyle="red";
-    ctx.lineWidth=1.5;
-    ctx.stroke();
-  }
+        const x1 = centerX + Math.cos(angle) * innerRadius;
+        const y1 = centerY + Math.sin(angle) * innerRadius;
 
-  time += 0.04;
-  animationId = requestAnimationFrame(draw);
+        const x2 = centerX + Math.cos(angle) * outerRadius;
+        const y2 = centerY + Math.sin(angle) * outerRadius;
+
+        ctx.beginPath();
+        ctx.moveTo(x1, y1);
+        ctx.lineTo(x2, y2);
+        ctx.strokeStyle = "red";
+        ctx.lineWidth = 1.5;
+        ctx.stroke();
+    }
+
+    time += 0.035;
 }
 
-function stop(){
-  cancelAnimationFrame(animationId);
-  animationId=null;
-  ctx.clearRect(0,0,canvas.width,canvas.height);
-}
-
-album.addEventListener("click", ()=>{
-  if(audio.paused){
-    audio.play();
-    if(!animationId) draw();
-  }else{
-    audio.pause();
-  }
+// START ONLY when audio ACTUALLY plays
+audio.addEventListener("play", () => {
+    if (!animationRunning) {
+        animationRunning = true;
+        animate();
+    }
 });
 
-audio.addEventListener("pause", stop);
-audio.addEventListener("ended", stop);
-
+// user interaction to start audio
+document.body.addEventListener("click", () => {
+    audio.play();
+});
 </script>
+
 </body>
 </html>
