--- a/index.html
+++ b/index.html
@@ -2,28 +2,31 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Line Wave Ring</title>
+<title>Audio Visualizer</title>
 
 <style>
-body {
-    margin: 0;
-    background: black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    overflow: hidden;
+body{
+  margin:0;
+  background:black;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  height:100vh;
+  overflow:hidden;
 }
 
-canvas { position: absolute; }
+canvas{
+  position:absolute;
+}
 
-#album {
-    position: absolute;
-    width: 220px;
-    height: 220px;
-    border-radius: 50%;
-    object-fit: cover;
-    z-index: 2;
+#album{
+  width:220px;
+  height:220px;
+  border-radius:50%;
+  object-fit:cover;
+  position:absolute;
+  z-index:2;
+  cursor:pointer;
 }
 </style>
 </head>
@@ -38,66 +41,85 @@ canvas { position: absolute; }
 const canvas = document.getElementById("canvas");
 const ctx = canvas.getContext("2d");
 const audio = document.getElementById("audio");
+const album = document.getElementById("album");
 
-function resize() {
-    canvas.width = window.innerWidth;
-    canvas.height = window.innerHeight;
+// Resize canvas
+function resize(){
+  canvas.width = window.innerWidth;
+  canvas.height = window.innerHeight;
 }
 resize();
 window.addEventListener("resize", resize);
 
 const baseRadius = 130;
-const lines = 200;
+const lines = 180;
 
 let time = 0;
-let animationRunning = false;
+let animationId = null;
 
-function animate() {
-    if (!animationRunning) return;
+// DRAW WAVES
+function draw(){
+  ctx.clearRect(0,0,canvas.width,canvas.height);
 
-    requestAnimationFrame(animate);
-    ctx.clearRect(0, 0, canvas.width, canvas.height);
+  const cx = canvas.width/2;
+  const cy = canvas.height/2;
 
-    const centerX = canvas.width / 2;
-    const centerY = canvas.height / 2;
+  for(let i=0;i<lines;i++){
+    const angle = (i/lines)*Math.PI*2;
+    const wave = Math.sin(angle*6 + time);
 
-    for (let i = 0; i < lines; i++) {
+    const inner = baseRadius + wave*4;
+    const outer = baseRadius + 10 + wave*6;
 
-        const angle = (i / lines) * Math.PI * 2;
-        const flow = Math.sin(angle * 6 + time);
+    const x1 = cx + Math.cos(angle)*inner;
+    const y1 = cy + Math.sin(angle)*inner;
 
-        const innerRadius = baseRadius + flow * 4;
-        const outerRadius = baseRadius + 8 + flow * 6;
+    const x2 = cx + Math.cos(angle)*outer;
+    const y2 = cy + Math.sin(angle)*outer;
 
-        const x1 = centerX + Math.cos(angle) * innerRadius;
-        const y1 = centerY + Math.sin(angle) * innerRadius;
+    ctx.beginPath();
+    ctx.moveTo(x1,y1);
+    ctx.lineTo(x2,y2);
+    ctx.strokeStyle="red";
+    ctx.lineWidth=1.5;
+    ctx.stroke();
+  }
 
-        const x2 = centerX + Math.cos(angle) * outerRadius;
-        const y2 = centerY + Math.sin(angle) * outerRadius;
-
-        ctx.beginPath();
-        ctx.moveTo(x1, y1);
-        ctx.lineTo(x2, y2);
-        ctx.strokeStyle = "red";
-        ctx.lineWidth = 1.5;
-        ctx.stroke();
-    }
-
-    time += 0.035;
+  time += 0.04;
+  animationId = requestAnimationFrame(draw);
 }
 
-// START ONLY when audio ACTUALLY plays
-audio.addEventListener("play", () => {
-    if (!animationRunning) {
-        animationRunning = true;
-        animate();
-    }
+// STOP WAVES
+function stopWaves(){
+  if(animationId){
+    cancelAnimationFrame(animationId);
+    animationId = null;
+  }
+  ctx.clearRect(0,0,canvas.width,canvas.height);
+}
+
+// CLICK IMAGE TO PLAY / PAUSE
+album.addEventListener("click", ()=>{
+  if(audio.paused){
+    audio.play();
+  }else{
+    audio.pause();
+  }
 });
 
-// user interaction to start audio
-document.body.addEventListener("click", () => {
-    audio.play();
+// START WAVES WHEN AUDIO PLAYS
+audio.addEventListener("play", ()=>{
+  if(!animationId){
+    draw();
+  }
 });
+
+// STOP WAVES WHEN PAUSED
+audio.addEventListener("pause", stopWaves);
+
+// STOP WAVES WHEN AUDIO ENDS
+audio.addEventListener("ended", stopWaves);
+
 </script>
 
 </body>
